# nika

./: .envrc  .gitignore  .surrealdb  ADDENDUM.md  Cargo.toml  PROJECTS.md  README.md  ROADMAP.md  deny.toml  flake.nix  justfile  tikv_compose.yaml
.github/workflows/: CI.yaml
crates/api/: Cargo.toml
crates/api/src/: cmd.rs  main.rs  temp_storage_payload.rs
crates/art/: Cargo.toml
crates/art/src/: lib.rs
crates/belt/: Cargo.toml
crates/belt/src/: bottleneck.rs  comp.rs  counter.rs  lib.rs  limiter.rs  source.rs
crates/cart-app/: Cargo.toml
crates/cart-app/src/: cache_model_page.rs  code_block.rs  entry_model_page.rs  fetchers.rs  home_page.rs  lib.rs  page_title.rs  side_bar.rs  store_model_page.rs  token_model_page.rs  utils.rs
crates/cart-app/style/: fonts.css
crates/cart-app/style/tailwind/: package.json  tailwind.config.js
crates/cart-frontend/: Cargo.toml
crates/cart-frontend/src/: lib.rs
crates/cart-server/: Cargo.toml
crates/cart-server/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  nar.rs
crates/core_types/: Cargo.toml
crates/core_types/src/: lib.rs  org.rs  perms.rs  slug.rs  ssr.rs  storage_creds.rs  store.rs  token.rs  user.rs
crates/crunch/: Cargo.toml
crates/crunch/src/: algorithm_to_adapter.rs  lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs
crates/db/: Cargo.toml
crates/db/migrations/migrations/: 20240707_180329_AddDefaultStores.surql  20240812_092152_AddDefaultOrgs.surql  20240812_110135_AddDefaultUsers.surql  20240812_135117_AddDefaultStores.surql  20240812_135833_AddDefaultTokens.surql
crates/db/migrations/migrations/definitions/: 20240812_135833_AddDefaultTokens.json  _initial.json
crates/db/migrations/schemas/: org.surql  store.surql  stores.surql  token.surql  user.surql
crates/db/src/: adapter.rs  consumptive.rs  lib.rs  migrate.rs  store.rs  token.rs
crates/db/src/kv_impl/: consumptive.rs  keys.rs  mod.rs  tests.rs
crates/db/src/tikv/: consumptive.rs  mod.rs
crates/db/tests/: tikv.rs
crates/dvf/: Cargo.toml
crates/dvf/src/: compression.rs  creds.rs  email.rs  files.rs  lib.rs  names.rs  record_id.rs  secrets.rs
crates/fetcher/: Cargo.toml
crates/fetcher/src/: fetcher_error.rs  main.rs
crates/health/: Cargo.toml
crates/health/src/: lib.rs
crates/hex/: Cargo.toml
crates/hex/src/: lib.rs  retryable.rs
crates/jobs/: Cargo.toml
crates/jobs/src/: lib.rs
crates/kv/: Cargo.toml
crates/kv/src/: key.rs  lib.rs  mock.rs  redis.rs  retryable.rs  starc.rs  tikv.rs  txn_ext.rs  value.rs
crates/kv/src/key/: segment.rs
crates/kv/tests/: redis.rs  tikv.rs
crates/migrator/: Cargo.toml
crates/migrator/src/: main.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/models/: Cargo.toml
crates/models/src/: cache.rs  compression.rs  entry.rs  lib.rs  org.rs  perms.rs  record_id.rs  store.rs  token.rs  user.rs
crates/mollusk/: Cargo.toml
crates/mollusk/src/: axum_json.rs  common.rs  confirm_token_by_secret_has_permission_error.rs  creds_fetching_error.rs  lib.rs  prepare_fetch_payload_error.rs
crates/names/: Cargo.toml
crates/names/src/: lib.rs
crates/nasty/: Cargo.toml
crates/nasty/src/: lib.rs
crates/nasty/src/nar/: mod.rs
crates/object_store_s3_wasm/: Cargo.toml  LICENSE
crates/object_store_s3_wasm/src/: builder.rs  error.rs  lib.rs  multipart.rs
crates/object_store_s3_wasm/tests/: web.rs
crates/prime-domain/: Cargo.toml
crates/prime-domain/src/: cache.rs  canonical.rs  entry.rs  lib.rs  pointer.rs  store.rs  temp_storage.rs  token.rs  user_storage.rs
crates/repos/: Cargo.toml
crates/repos/src/: base.rs  cache.rs  entry.rs  lib.rs  store.rs  temp_storage.rs  token.rs  user_storage.rs
crates/rope/: Cargo.toml
crates/rope/src/: lib.rs
crates/services/: Cargo.toml
crates/services/src/: lib.rs
crates/slugger/: Cargo.toml
crates/slugger/src/: lax.rs  lib.rs  strict.rs
crates/starc/: Cargo.toml
crates/starc/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: counted_async_reader.rs  lib.rs  local.rs  r2.rs  s3_compat.rs  temp.rs
crates/stream-tools/: Cargo.toml
crates/stream-tools/src/: comp_aware_a_reader.rs  counted_async_reader.rs  lib.rs  read_jump.rs
crates/tasks/: Cargo.toml
crates/tasks/src/: fetch_store_creds.rs  health_check.rs  lib.rs  naive_upload.rs  prepare_fetch_payload.rs
crates/tasks/src/db/: mod.rs
crates/tasks/src/token/: mod.rs
flake-modules/devshell/: bin-commands.nix  default.nix  docker-commands.nix  stack-commands.nix
flake-modules/e2e/: api-upload-pathway.nix  common.nix  default.nix  first-party-api-validate-tikv-urls.nix  tikv-basic-connect.nix  tikv-cluster-connect.nix
flake-modules/e2e/common/: assign-static.nix  default.nix  tikv-bare-metal-basic.nix  tikv-bare-metal-cluster.nix
flake-modules/e2e/domain/: api-upload-pathway.nix  api-validate-tikv-urls.nix
flake-modules/e2e/tikv/: bare-metal-basic-connect.nix  bare-metal-cluster-connect.nix
flake-modules/flake-outputs/: default.nix
flake-modules/images-output/: default.nix
flake-modules/kubernetes/: default.nix
flake-modules/nixos-modules/: api.nix  default.nix  pd.nix  tikv.nix
flake-modules/nixpkgs/: default.nix
flake-modules/repo-tests/: default.nix
flake-modules/rust-builds/: default.nix
flake-modules/tikv/: default.nix  makeTikvBinary.nix  makeTikvDockerImage.nix
flake-modules/tikv/nixos-modules/: module-lib.nix  pd.nix  tikv.nix
nix/: tikv.nix
