
[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
license-file = "LICENSE.md"

[workspace.lints.rust]
missing_docs = "deny"

[workspace.dependencies]
# strictly codegen
async-trait = { version = "0.1" }
serde = { version = "1", features = [ "derive" ] }
thiserror = { version = "1" }

# errors
# miette = { version = "7", default-features = false, features = [ "derive" ] }
miette = { git = "https://github.com/zkat/miette", rev = "93d3bd118a072c35aa761f0ec74317166ec08113", default-features = false, features = ["derive"] }

# mainline application
axum = { version = "0.7" }
tokio = { version = "1" }
tokio-util = { version = "0.7" }
tokio-stream = { version = "0.1" }

# atomic-ish features
ulid = { git = "https://github.com/TimLuq/ulid-rs", branch = "fix-57-feature-combos-compiles", default-features = false, features = [ "serde", "std" ] }
serde_json = { version = "1" }
nanorand = { version = "0.7", default-features = false }
futures = { version = "0.3" }
clap = { version = "4.5", features = [ "derive" ] }
nutype = { version = "0.5" }

# tracing
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
