
[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
license-file = "LICENSE.md"

[workspace.lints.rust]
missing_docs = "deny"

[workspace.dependencies]
# strictly codegen
async-trait = { version = "0.1" }
cfg-if = { version = "1" }
serde = { version = "1", features = [ "derive" ] }
thiserror = { version = "1" }

# errors
# miette = { version = "7", default-features = false, features = [ "derive" ] }
miette = { git = "https://github.com/zkat/miette", rev = "93d3bd118a072c35aa761f0ec74317166ec08113", default-features = false, features = ["derive"] }

# mainline application
axum = { version = "0.7" }
axum-core = { version = "0.4" }
http = { version = "1" }
tokio = { version = "1" }
tokio-util = { version = "0.7" }
tokio-stream = { version = "0.1" }

# atomic-ish features
bytes = { version = "1" }
ulid = { version = "1.1", features = [ "serde" ] }
serde_json = { version = "1" }
nanorand = { version = "0.7", default-features = false }
futures = { version = "0.3" }
clap = { version = "4.5", features = [ "derive" ] }
nutype = { version = "0.5" }

# leptos-specific
leptos = { version = "0.7.0-gamma3", features = ["nightly", "experimental-islands"] }
leptos_axum = { version = "0.7.0-gamma3", features = [] }
leptos_meta = { version = "0.7.0-gamma3", features = [] }
leptos_router = { version = "0.7.0-gamma3", features = ["nightly"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
wasm-bindgen = "=0.2.93"

# tracing
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }

# only for client-side leptos builds
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[[workspace.metadata.leptos]]
name = "cart"
hash-files = false

bin-package = "cart-server"
lib-package = "cart-frontend"

site-root = "target/cart"
site-pkg-dir = "pkg"

style-file = "crates/cart-app/style/main.scss"
assets-dir = "crates/cart-app/public"

site-addr = "127.0.0.1:3000"
reload-port = 3001

browserquery = "defaults"

tailwind-input-file = "crates/cart-app/style/main.scss"
tailwind-config-file = "crates/cart-app/style/tailwind/tailwind.config.js"

# set by cargo-leptos
watch = false
env = "DEV"

bin-features = []
bin-default-features = false
lib-features = []
lib-default-features = false
lib-profile-release = "wasm-release"

