[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
art = { path = "../art" }
models = { path = "../models" }
db = { path = "../db" }
mollusk = { path = "../mollusk" }
storage = { path = "../storage" }
tasks = { path = "../tasks" }

# serde.workspace = true
thiserror.workspace = true
miette = { workspace = true, features = [ "fancy" ] }

axum = { workspace = true, features = [ "macros" ] }
tokio = { workspace = true, features = [ "rt", "rt-multi-thread" ] }
tokio-stream.workspace = true
tokio-util = { workspace = true, features = [ "io" ] }

tracing.workspace = true
tracing-subscriber.workspace = true
