[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
art = { path = "../art" }
mollusk = { path = "../mollusk" }
storage = { path = "../storage" }
tasks = { path = "../tasks" }
prime-domain = { path = "../prime-domain" }

# serde.workspace = true
serde_json.workspace = true
cfg-if.workspace = true
clap.workspace = true
thiserror.workspace = true
miette = { workspace = true, features = [ "fancy" ] }

axum = { workspace = true, features = [ "macros" ] }
tokio = { workspace = true, features = [ "full" ] }
tokio-stream.workspace = true
tokio-util = { workspace = true, features = [ "io" ] }

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-chrome = { version = "0.7" }

[features]
default = []
