[package]
name = "art"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
artem = { version = "3", default-features = false }
image = { version = "0.25", features = ["png"], default-features = false }

syn = { version = "1", features = [ "full" ] }
quote = { version = "1" }

[lib]
proc-macro = true
