[package]
name = "belt"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bytes.workspace = true
futures.workspace = true
pin-project.workspace = true

tokio = { workspace = true, features = ["bytes", "sync", "io-util"] }
tokio-util = { workspace = true, features = ["io"] }

async-compression = { version = "0.4", features = ["tokio", "zstd"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
