[package]
name = "cli"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
nasty = { path = "../nasty", features = [ "nar" ] }

clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
humansize = "2.1.3"
miette.workspace = true
humantime = "2.1.0"
