[package]
name = "core_types"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
ulid.workspace = true
serde.workspace = true

surrealdb = { workspace = true, optional = true }
slug = { version = "0.1" }
nutype = { workspace = true, features = [ "serde" ] }

[features]
default = [ ]
ssr = [ "dep:surrealdb" ]
