[package]
name = "core_types"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
slugger = { path = "../slugger" }

ulid.workspace = true
serde.workspace = true

surrealdb = { workspace = true, optional = true }

[features]
default = [ ]
ssr = [ "dep:surrealdb" ]
