[package]
name = "daemon"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
art = { path = "../art" }
jobs = { path = "../jobs" }
names = { path = "../names" }

apalis.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = [ "rt", "rt-multi-thread", "macros", "signal" ] }
miette = { workspace = true, features = [ "fancy" ] }
