[package]
name = "daemon"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
art = { path = "../art" }
tasks = { path = "../tasks" }
names = { path = "../names" }

tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = [ "rt", "rt-multi-thread", "macros", "signal" ] }
miette = { workspace = true, features = [ "fancy" ] }
