[package]
name = "db"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
kv = { path = "../kv", features = [ "tikv" ] }
models = { path = "../models" }

miette.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = [ "full" ] }
ulid = { workspace = true, features = [ "std" ] }
