[package]
name = "db"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
hex = { path = "../hex" }
kv = { path = "../kv", features = [ "tikv" ] }
model = { path = "../model" }
models = { path = "../models", optional = true }

async-trait.workspace = true
miette.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "rt" ] }

[features]
default = [ ]
migrate = [ "dep:models" ]

[dev-dependencies]
tokio = { workspace = true, features = [ "full" ] }
ulid = { workspace = true }
