[package]
name = "fetcher"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
art = { path = "../art" }
core_types = { path = "../core_types" }
mollusk = { path = "../mollusk" }
storage = { path = "../storage" }

thiserror.workspace = true
miette = { workspace = true, features = [ "fancy" ] }

axum = { workspace = true, features = [ "macros" ] }
tokio = { workspace = true, features = [ "rt", "rt-multi-thread" ] }
tokio-util = { workspace = true, features = [ "io" ] }

tracing.workspace = true
tracing-subscriber.workspace = true
tokio-stream.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde.workspace = true
