[package]
name = "fetcher"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
art = { path = "../art" }
core_types = { path = "../core_types" }
mollusk = { path = "../mollusk" }
storage = { path = "../storage" }

serde.workspace = true
thiserror.workspace = true
miette = { workspace = true, features = [ "fancy" ] }

axum = { workspace = true, features = [ "macros" ] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { workspace = true, features = [ "rt", "rt-multi-thread" ] }
tokio-stream.workspace = true
tokio-util.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
