[package]
name = "kv"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
hex = { path = "../hex" }
slugger = { path = "../slugger" }
starc = { path = "../starc" }

thiserror.workspace = true
serde.workspace = true
miette.workspace = true

tikv-client = { version = "0.3", optional = true, default-features = false }

smallvec = "1.13.2"
rmp-serde = "1.3.0"
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[features]
default = [ "tikv" ]
tikv = [ "dep:tikv-client" ]
