[package]
name = "kv"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
hex = { path = "../hex" }
slugger = { path = "../slugger" }
starc = { path = "../starc" }

thiserror.workspace = true
serde.workspace = true
miette.workspace = true

tikv-client = { git = "https://github.com/johnbchron/tikv-client-rust", branch = "crunch-deps", optional = true, default-features = false }

smallvec = "1.13.2"
rmp-serde = "1.3.0"
tracing.workspace = true
async-trait = "0.1.83"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[features]
default = [ "tikv" ]
tikv = [ "dep:tikv-client" ]
