[package]
name = "mollusk"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
core_types = { path = "../core_types" }

axum.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
