[package]
name = "prime-domain"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
hex = { path = "../hex" }
repos = { path = "../repos" }
models = { path = "../models" }
storage = { path = "../storage" }

async-trait.workspace = true
miette.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
