[package]
name = "prime-domain"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
hex = { path = "../hex" }
crunch = { path = "../crunch" }
repos = { path = "../repos" }
models = { path = "../models" }
stream-tools = { path = "../stream-tools" }

async-trait.workspace = true
miette.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
