[package]
name = "repos"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
hex = { path = "../hex" }
models = { path = "../models" }
db = { path = "../db" }
storage = { path = "../storage" }

async-trait.workspace = true
miette.workspace = true
tracing.workspace = true

tokio = { workspace = true, optional = true, features = ["full"] }

[lints]
workspace = true

[features]
default = []

mock-temp-storage = ["dep:tokio"]
