[package]
name = "rope"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
names = { path = "../names" }

async-trait.workspace = true
miette.workspace = true
redis = { version = "0.25", features = [ "aio", "tokio-comp" ] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "sync", "time" ] }
tracing = { workspace = true }
ulid = { workspace = true, features = [ "std" ] }
