[package]
name = "storage"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
hex = { path = "../hex" }
models = { path = "../models" }
stream-tools = { path = "../stream-tools" }

async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "fs" ] }
object_store = { version = "0.10.1", features = ["aws"] }
miette.workspace = true
futures.workspace = true
tokio-util = { workspace = true, features = ["compat"] }
tracing.workspace = true
bytes-stream = "0.0.3"

[dev-dependencies]
temp-dir = { version = "0.1" }
tokio = { workspace = true, features = [ "fs", "rt", "macros", "io-util" ] }
