[package]
name = "tasks"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
models = { path = "../models" }
prime-domain = { path = "../prime-domain" }
repos = { path = "../repos" }
db = { path = "../db" }
mollusk = { path = "../mollusk" }
rope = { path = "../rope" }
slugger = { path = "../slugger" }
storage = { path = "../storage" }

async-trait.workspace = true
miette.workspace = true
serde.workspace = true

tracing.workspace = true
