[package]
name = "tasks"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
prime-domain = { path = "../prime-domain" }
mollusk = { path = "../mollusk" }
rope = { path = "../rope" }

async-trait.workspace = true
serde.workspace = true

tracing.workspace = true
